--- a/index.html
+++ b/index.html
@@ -11,16 +11,59 @@
 
 <body>
     <header>
-        <section class="container">
-            <img class="google" src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="logo">
+        <section>
+            <img class="google"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
+                alt="logo">
         </section>
-        <h2 class="title">This is a fully responsive sitedesigned and coded by web proffesionals</h2>
+        <h2 class="title">This is a fully responsive sitedesigned and coded by web proffesionals.</h2>
         <p class="subtitle">Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed
             cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam.
             Lorem ipsum dolor sit amet nullam dolore.</p>
     </header>
+    <hero class="main-icons">
+        <section class="container">
+            <img class="img1" src="https://placeimg.com/300/300/arch" alt="img1">
+        </section>
+        <section class="container">
+            <img class="img2" src="https://placeimg.com/300/300/nature" alt="img2">
+        </section>
+        <section class="container">
+            <img class="img3" src="https://placeimg.com/300/300/tech" alt="img3">
+        </section>
+        <section class="container">
+            <img class="img4" src="https://placeimg.com/300/300/nature" alt="img4">
+        </section>
+        <section class="container">
+            <img class="img5" src="https://placeimg.com/300/300/animals" alt="img5">
+        </section>
+        <section class="container">
+            <img class="img6" src="https://placeimg.com/300/300/people" alt="img5">
+        </section>
+    </hero>
+
+    <footer class="footer">
+        <div class="contacts">
+            <h3 class="footer-title">FOLLOW</h3>
+            <div class="icons">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-futbol-o" aria-hidden="true"></i>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+
+            </div>
+        </div>
+    </footer>
 
 
+
+
+    </div>
+    </div>
 
 </body>
 
