--- a/index.html
+++ b/index.html
@@ -46,16 +46,30 @@
         <div class="contacts">
             <h3 class="footer-title">FOLLOW</h3>
             <div class="icons">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <i class="fa fa-futbol-o" aria-hidden="true"></i>
-                <i class="fa fa-paw" aria-hidden="true"></i>
-                <i class="fa fa-ravelry" aria-hidden="true"></i>
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="social-icons fa fa-twitter" aria-hidden="true"></i>
+                <i class="social-icons fa fa-facebook-square" aria-hidden="true"></i>
+                <i class="social-icons fa fa-instagram" aria-hidden="true"></i>
+                <i class="social-icons fa fa-futbol-o" aria-hidden="true"></i>
+                <i class="social-icons fa fa-paw" aria-hidden="true"></i>
+                <i class="social-icons fa fa-ravelry" aria-hidden="true"></i>
+                <i class="social-icons fa fa-phone" aria-hidden="true"></i>
+                <i class="social-icons fa fa-envelope" aria-hidden="true"></i>
 
             </div>
+            <h3 class="footer-title2">GET IN TOUCH</h3>
+            <form action="#">
+                <label for="name>">
+                    <form action="/action_page.php">
+                        <label for="fname"></label>
+                        <input class="get-in-touch" placeholder="Name" type="text" id="fname" name="fname"><br><br>
+                        <label for="email"></label>
+                        <input class="get-in-touch" placeholder="Email" type="email" id="email" name="email"><br><br>
+                        <textarea class="get-in-touch" placeholder="Message" id="w3review" name="w3review" rows="4"
+                            cols="auto"></textarea>
+
+                        <button>SEND</button>
+
+
         </div>
     </footer>
 
