--- a/index.html
+++ b/index.html
@@ -54,23 +54,31 @@
                 <i class="social-icons fa fa-ravelry" aria-hidden="true"></i>
                 <i class="social-icons fa fa-phone" aria-hidden="true"></i>
                 <i class="social-icons fa fa-envelope" aria-hidden="true"></i>
-
             </div>
-            <h3 class="footer-title2">GET IN TOUCH</h3>
-            <form action="#">
-                <label for="name>">
-                    <form action="/action_page.php">
-                        <label for="fname"></label>
-                        <input class="get-in-touch" placeholder="Name" type="text" id="fname" name="fname"><br><br>
-                        <label for="email"></label>
-                        <input class="get-in-touch" placeholder="Email" type="email" id="email" name="email"><br><br>
-                        <textarea class="get-in-touch" placeholder="Message" id="w3review" name="w3review" rows="4"
-                            cols="auto"></textarea>
-
-                        <button>SEND</button>
-
-
         </div>
+        <div class="end-section">
+            <h3 class="footer-title2">GET IN TOUCH</h3>
+            <div class="name-email">
+                <form action="#">
+                    <label for="name>">
+                        <form action="/action_page.php">
+                            <div class="name-email">
+                                <label for="fname"></label>
+                                <input class="get-in-touch" placeholder="Name" type="text" id="fname"
+                                    name="fname"><br><br>
+                                <label for="email"></label>
+                                <input class="get-in-touch" placeholder="Email" type="email" id="email"
+                                    name="email"><br><br>
+                            </div>
+
+                            <textarea class="get-in-touch" placeholder="Message" id="w3review" name="w3review" rows="4"
+                                cols="auto"></textarea>
+
+                            <button>SEND</button>
+                            <p class="all-rights">© Untitled. All rights reserved.</p>
+            </div>
+
+
     </footer>
 
 
